<resources>
    <string name="app_name">IAInteractive_demo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_cinemas">Cinemas</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_pass">Contrasena</string>
    <string name="action_iniciar_sesion">iniciar sesion</string>
    <string name="text_title">title</string>
    <string name="tittle_perfil">PERFIL</string>
    <string name="text_bienvenido">Bienvenido:</string>
    <string name="text_email">Correo electronico:</string>
    <string name="text_card_number">Numero de tarjeta</string>
    <string name="action_transaction">Obtener transacciones</string>
    <string name="cartelera">Cartelera</string>
    <string name="title_cinema">Cinemas</string>
</resources>