<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="accountViewModel"
            type="com.dukena.myapplication.fragments.account.viewmodel.AccountViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tittle_perfil"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:layout_margin="@dimen/margin_default"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="2dp"
            android:background="@color/black"/>
        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/big_margin"
            android:layout_height="@dimen/big_margin"
            android:layout_margin="@dimen/margin_large"
            android:src="@drawable/ic_account_box_24"
            app:tint="@color/design_default_color_primary"
            android:contentDescription="ImageProfile" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_marginHorizontal="@dimen/margin_default"
            android:text="@string/text_bienvenido"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_name"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:text="@={accountViewModel.name}"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_marginHorizontal="8dp"
            android:text="@string/text_email"
            android:layout_marginTop="@dimen/margin_default"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_marginHorizontal="8dp"
            android:text="@={accountViewModel.email}"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_card_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={accountViewModel.cardNumber}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:text="@string/action_transaction"
            android:textAllCaps="true"
            android:onClick="@{ () -> accountViewModel.getTransaccions()}"
            android:layout_marginHorizontal="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</layout>